src/styles/components/AutoComplete/autocomplete.css
#search-wrapper {
    width: 100%;
    max-width: 40rem;
    margin: 3rem auto;
}
#search-bar {
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
}

#search-bar:hover {
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0;
    box-shadow: 0 1px 6px rgb(32 33 36 / 28%);
    border-color: rgba(223,225,229,0);
    border-radius: 1.625rem;
}

#search-autocomplete {
    width: 100%;
    height: 2.8rem;
    background: #ffffff;
    outline: none;
    border: none;
    border-radius: 1.625rem;
    padding: 0 3.5rem 0 1.5rem;
    font-size: 1rem;
    box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px, rgb(209, 213, 219) 0px 0px 0px 1px inset;
}

